binning numerical vars PM

--- a/code/pattern_mining.ipynb
+++ b/code/pattern_mining.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 839,
    "id": "76c01c86",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 840,
    "id": "a576fa9f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 841,
    "id": "5d4b04ba",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 842,
    "id": "9f754901",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 842,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 843,
    "id": "55f69ccf",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "Name: count, Length: 87, dtype: int64"
       ]
      },
-     "execution_count": 472,
+     "execution_count": 843,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 844,
    "id": "02f30fd7",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 845,
    "id": "79e5c52d",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "Name: count, Length: 133, dtype: int64"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 845,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 846,
    "id": "96241eeb",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "Name: count, Length: 253, dtype: int64"
       ]
      },
-     "execution_count": 475,
+     "execution_count": 846,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 847,
    "id": "49b62ec7",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "Name: count, Length: 297, dtype: int64"
       ]
      },
-     "execution_count": 476,
+     "execution_count": 847,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 848,
    "id": "57732de0",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "Name: count, Length: 2299, dtype: int64"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 848,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 849,
    "id": "93a4fd2c",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "Name: count, Length: 596, dtype: int64"
       ]
      },
-     "execution_count": 478,
+     "execution_count": 849,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 850,
    "id": "81909407",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "Name: count, Length: 178, dtype: int64"
       ]
      },
-     "execution_count": 479,
+     "execution_count": 850,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 851,
    "id": "7fd3d2f5",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "Name: count, Length: 62, dtype: int64"
       ]
      },
-     "execution_count": 480,
+     "execution_count": 851,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 852,
    "id": "0ceebbb1",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "Name: count, Length: 284, dtype: int64"
       ]
      },
-     "execution_count": 481,
+     "execution_count": 852,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 853,
    "id": "df74e9d1",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 482,
+     "execution_count": 853,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 854,
    "id": "e042ef05",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "Name: canHaveEpisodes, Length: 21556, dtype: object"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 854,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 855,
    "id": "7fc9d917",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
        "Name: isAdult, Length: 21556, dtype: object"
       ]
      },
-     "execution_count": 484,
+     "execution_count": 855,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 856,
    "id": "3b4b618d",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 857,
    "id": "696a72e4",
    "metadata": {},
    "outputs": [],
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 858,
    "id": "96c2664d",
    "metadata": {},
    "outputs": [],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 859,
    "id": "6e6a2675",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 860,
    "id": "d4effb5f",
    "metadata": {},
    "outputs": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 861,
    "id": "b90d9794",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 862,
    "id": "d92d6f02",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 863,
    "id": "6cde13a3",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 864,
    "id": "0b5a0207",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 865,
    "id": "e9abeb56",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 866,
    "id": "75d4b05e",
    "metadata": {},
    "outputs": [
@@ -1048,28 +1048,196 @@
      "output_type": "stream",
      "text": [
       "rating_bin\n",
-      "MediumRating     15965\n",
-      "HighRating        3173\n",
-      "LowRating         2126\n",
+      "HighRating        6322\n",
+      "MediumRating      5985\n",
+      "LowRating         5784\n",
+      "VeryHighRating    3173\n",
       "VeryLowRating      292\n",
       "Name: count, dtype: int64\n",
       "                 count      mean       std  min  25%  50%  75%   max\n",
       "rating_bin                                                          \n",
       "VeryLowRating    292.0  2.681507  0.508958  1.0  2.0  3.0  3.0   3.0\n",
-      "LowRating       2126.0  4.711195  0.453314  4.0  4.0  5.0  5.0   5.0\n",
-      "MediumRating   15965.0  7.166865  0.772859  6.0  7.0  7.0  8.0   8.0\n",
-      "HighRating      3173.0  9.144973  0.352129  9.0  9.0  9.0  9.0  10.0\n"
+      "LowRating       5784.0  5.526279  0.679484  4.0  5.0  6.0  6.0   6.0\n",
+      "MediumRating    5985.0  7.000000  0.000000  7.0  7.0  7.0  7.0   7.0\n",
+      "HighRating      6322.0  8.000000  0.000000  8.0  8.0  8.0  8.0   8.0\n",
+      "VeryHighRating  3173.0  9.144973  0.352129  9.0  9.0  9.0  9.0  10.0\n"
      ]
     }
    ],
    "source": [
-    "#RATING\n",
-    "bins = [-1, 3, 5, 8, df_copy['rating'].max()]\n",
-    "labels = ['VeryLowRating', 'LowRating', 'MediumRating', 'HighRating']\n",
+    "#RATING --> da valuatare se aggregare bin medium e high\n",
+    "bins = [-1, 3, 6, 7, 8, df_copy['rating'].max()]\n",
+    "labels = ['VeryLowRating', 'LowRating', 'MediumRating', 'HighRating', \"VeryHighRating\"]\n",
     "df_copy['rating_bin'] = pd.cut(df_copy['rating'], bins=bins, labels=labels)\n",
     "\n",
     "print(df_copy['rating_bin'].value_counts())\n",
     "print(df_copy.groupby('rating_bin')['rating'].describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad7cfcac",
+   "metadata": {},
+   "source": [
+    "##### numVotes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 867,
+   "id": "749b1c77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    2.155600e+04\n",
+      "mean     1.518088e+03\n",
+      "std      2.094159e+04\n",
+      "min      5.000000e+00\n",
+      "25%      1.500000e+01\n",
+      "50%      3.700000e+01\n",
+      "75%      1.470000e+02\n",
+      "max      1.071372e+06\n",
+      "Name: numVotes, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_copy['numVotes'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 868,
+   "id": "23c1a18c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_copy[\"log_numVotes\"] = np.log1p(df[\"numVotes\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 869,
+   "id": "a0502797",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    21556.000000\n",
+      "mean         4.081718\n",
+      "std          1.760399\n",
+      "min          1.791759\n",
+      "25%          2.772589\n",
+      "50%          3.637586\n",
+      "75%          4.997212\n",
+      "max         13.884452\n",
+      "Name: log_numVotes, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_copy['log_numVotes'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 870,
+   "id": "85b5da11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passaggio 2: definizione dei bin\n",
+    "def bin_votes(log_val):\n",
+    "    if log_val <= 2.7:\n",
+    "        return 'VeryLowVotes'     \n",
+    "    elif log_val <= 3.9:\n",
+    "        return 'LowVotes'      \n",
+    "    elif log_val <= 5:\n",
+    "        return 'MediumVotes' \n",
+    "    elif log_val <= 8:\n",
+    "        return \"HighVotes\"       \n",
+    "    else:\n",
+    "        return 'VeryHighVotes'    \n",
+    "\n",
+    "# Passaggio 3: applicazione del binning\n",
+    "df_copy['numvotes_bin'] = df_copy['log_numVotes'].apply(bin_votes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 871,
+   "id": "dd4f1649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numvotes_bin\n",
+      "LowVotes         7126\n",
+      "VeryLowVotes     4918\n",
+      "HighVotes        4636\n",
+      "MediumVotes      4126\n",
+      "VeryHighVotes     750\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_copy['numvotes_bin'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 872,
+   "id": "1eef9d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                count          mean            std     min      25%     50%  \\\n",
+      "numvotes_bin                                                                  \n",
+      "HighVotes      4636.0    627.911346     587.550972   148.0   230.00   391.0   \n",
+      "LowVotes       7126.0     26.137946       9.577997    14.0    18.00    24.0   \n",
+      "MediumVotes    4126.0     87.547988      27.756307    49.0    64.00    82.0   \n",
+      "VeryHighVotes   750.0  38960.374667  105652.794274  2980.0  4247.25  7430.5   \n",
+      "VeryLowVotes   4918.0      9.177918       2.342771     5.0     7.00     9.0   \n",
+      "\n",
+      "                    75%        max  \n",
+      "numvotes_bin                        \n",
+      "HighVotes        783.25     2976.0  \n",
+      "LowVotes          33.00       48.0  \n",
+      "MediumVotes      109.00      147.0  \n",
+      "VeryHighVotes  21480.00  1071372.0  \n",
+      "VeryLowVotes      11.00       13.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_copy.groupby('numvotes_bin')['numVotes'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 873,
+   "id": "d7b88d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #NUMVOTES\n",
+    "# bins = [-1, 3, 6, 7, 8, df_copy['numVotes'].max()]\n",
+    "# labels = ['VeryLowNumVotes', 'LowNumVotes', 'MediumNumVotes', 'HighNumVotes', \"VeryHighNumVotes\"]\n",
+    "# df_copy['numvotes_bin'] = pd.cut(df_copy['numVotes'], bins=bins, labels=labels)\n",
+    "\n",
+    "# print(df_copy['numvotes_bin'].value_counts())\n",
+    "# print(df_copy.groupby('numvotes_bin')['numVotes'].describe())"
    ]
   }
  ],
