--- a/code/pattern_mining.ipynb
+++ b/code/pattern_mining.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 839,
+   "execution_count": 514,
    "id": "76c01c86",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 840,
+   "execution_count": 515,
    "id": "a576fa9f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 841,
+   "execution_count": 516,
    "id": "5d4b04ba",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 842,
+   "execution_count": 517,
    "id": "9f754901",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 842,
+     "execution_count": 517,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 843,
+   "execution_count": 518,
    "id": "55f69ccf",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "Name: count, Length: 87, dtype: int64"
       ]
      },
-     "execution_count": 843,
+     "execution_count": 518,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 844,
+   "execution_count": 519,
    "id": "02f30fd7",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 845,
+   "execution_count": 520,
    "id": "79e5c52d",
    "metadata": {},
    "outputs": [
@@ -283,276 +283,21 @@
        "Name: count, Length: 133, dtype: int64"
       ]
      },
-     "execution_count": 845,
+     "execution_count": 520,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['startYear'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 846,
-   "id": "96241eeb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fill_runtimeMinutes_Bruno\n",
-       "0.0         1\n",
-       "1.0       107\n",
-       "2.0        65\n",
-       "3.0       117\n",
-       "4.0       113\n",
-       "         ... \n",
-       "570.0       1\n",
-       "600.0       1\n",
-       "1050.0      1\n",
-       "1290.0      1\n",
-       "3000.0      1\n",
-       "Name: count, Length: 253, dtype: int64"
-      ]
-     },
-     "execution_count": 846,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['fill_runtimeMinutes_Bruno'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 847,
-   "id": "49b62ec7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "totalMedia\n",
-       "0       4296\n",
-       "1       6296\n",
-       "2       2351\n",
-       "3       1211\n",
-       "4        946\n",
-       "        ... \n",
-       "2652       1\n",
-       "2767       1\n",
-       "3108       1\n",
-       "3350       1\n",
-       "3516       1\n",
-       "Name: count, Length: 297, dtype: int64"
-      ]
-     },
-     "execution_count": 847,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['totalMedia'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 848,
-   "id": "57732de0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numVotes\n",
-       "5          262\n",
-       "6          472\n",
-       "7          638\n",
-       "8          684\n",
-       "9          649\n",
-       "          ... \n",
-       "737343       1\n",
-       "803146       1\n",
-       "825934       1\n",
-       "966565       1\n",
-       "1071372      1\n",
-       "Name: count, Length: 2299, dtype: int64"
-      ]
-     },
-     "execution_count": 848,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['numVotes'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 849,
-   "id": "93a4fd2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "totalCredits\n",
-       "0        109\n",
-       "1        282\n",
-       "2        222\n",
-       "3        236\n",
-       "4        312\n",
-       "        ... \n",
-       "3925       1\n",
-       "4404       1\n",
-       "4443       1\n",
-       "4973       1\n",
-       "15742      1\n",
-       "Name: count, Length: 596, dtype: int64"
-      ]
-     },
-     "execution_count": 849,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['totalCredits'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 850,
-   "id": "81909407",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "criticReviewsTotal\n",
-       "0      14982\n",
-       "1       2511\n",
-       "2       1006\n",
-       "3        586\n",
-       "4        406\n",
-       "       ...  \n",
-       "418        1\n",
-       "439        1\n",
-       "491        1\n",
-       "533        1\n",
-       "567        1\n",
-       "Name: count, Length: 178, dtype: int64"
-      ]
-     },
-     "execution_count": 850,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['criticReviewsTotal'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 851,
-   "id": "7fd3d2f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numRegions\n",
-       "1     12505\n",
-       "2      2484\n",
-       "3      1174\n",
-       "4       946\n",
-       "5       656\n",
-       "      ...  \n",
-       "58        2\n",
-       "60        1\n",
-       "62        1\n",
-       "63        1\n",
-       "69        1\n",
-       "Name: count, Length: 62, dtype: int64"
-      ]
-     },
-     "execution_count": 851,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['numRegions'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 852,
-   "id": "0ceebbb1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "userReviewsTotal\n",
-       "0       12080\n",
-       "1        3290\n",
-       "2        1490\n",
-       "3         863\n",
-       "4         551\n",
-       "        ...  \n",
-       "1604        1\n",
-       "1663        1\n",
-       "1821        1\n",
-       "2423        1\n",
-       "5727        1\n",
-       "Name: count, Length: 284, dtype: int64"
-      ]
-     },
-     "execution_count": 852,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['userReviewsTotal'].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 853,
-   "id": "df74e9d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "rating\n",
-       "1        6\n",
-       "2       81\n",
-       "3      205\n",
-       "4      614\n",
-       "5     1512\n",
-       "6     3658\n",
-       "7     5985\n",
-       "8     6322\n",
-       "9     2713\n",
-       "10     460\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 853,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['rating'].value_counts().sort_index()"
+    "df['startYear'].value_counts().sort_index()\n",
+    "# df['fill_runtimeMinutes_Bruno'].value_counts().sort_index()\n",
+    "# df['totalMedia'].value_counts().sort_index()\n",
+    "# df['numVotes'].value_counts().sort_index()\n",
+    "# df['totalCredits'].value_counts().sort_index()\n",
+    "# df['criticReviewsTotal'].value_counts().sort_index()\n",
+    "# df['numRegions'].value_counts().sort_index()\n",
+    "# df['userReviewsTotal'].value_counts().sort_index()\n",
+    "# df['rating'].value_counts().sort_index()"
    ]
   },
   {
@@ -565,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 854,
+   "execution_count": 521,
    "id": "e042ef05",
    "metadata": {},
    "outputs": [
@@ -586,7 +331,7 @@
        "Name: canHaveEpisodes, Length: 21556, dtype: object"
       ]
      },
-     "execution_count": 854,
+     "execution_count": 521,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 855,
+   "execution_count": 522,
    "id": "7fc9d917",
    "metadata": {},
    "outputs": [
@@ -621,7 +366,7 @@
        "Name: isAdult, Length: 21556, dtype: object"
       ]
      },
-     "execution_count": 855,
+     "execution_count": 522,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 856,
+   "execution_count": 523,
    "id": "3b4b618d",
    "metadata": {},
    "outputs": [
@@ -739,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 857,
+   "execution_count": 524,
    "id": "696a72e4",
    "metadata": {},
    "outputs": [],
@@ -749,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 858,
+   "execution_count": 525,
    "id": "96c2664d",
    "metadata": {},
    "outputs": [],
@@ -787,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 859,
+   "execution_count": 526,
    "id": "6e6a2675",
    "metadata": {},
    "outputs": [
@@ -813,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 860,
+   "execution_count": 527,
    "id": "d4effb5f",
    "metadata": {},
    "outputs": [
@@ -855,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 528,
    "id": "b90d9794",
    "metadata": {},
    "outputs": [
@@ -881,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 529,
    "id": "d92d6f02",
    "metadata": {},
    "outputs": [
@@ -934,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
+   "execution_count": 530,
    "id": "6cde13a3",
    "metadata": {},
    "outputs": [
@@ -960,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 531,
    "id": "0b5a0207",
    "metadata": {},
    "outputs": [
@@ -1013,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 532,
    "id": "e9abeb56",
    "metadata": {},
    "outputs": [
@@ -1039,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 533,
    "id": "75d4b05e",
    "metadata": {},
    "outputs": [
@@ -1079,12 +824,13 @@
    "id": "ad7cfcac",
    "metadata": {},
    "source": [
-    "##### numVotes"
+    "##### numVotes\n",
+    "distrib asimmetrica -> log o togliere outliers'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 534,
    "id": "749b1c77",
    "metadata": {},
    "outputs": [
@@ -1110,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 535,
    "id": "23c1a18c",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 536,
    "id": "a0502797",
    "metadata": {},
    "outputs": [
@@ -1146,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 537,
    "id": "85b5da11",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 538,
    "id": "dd4f1649",
    "metadata": {},
    "outputs": [
@@ -1194,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 539,
    "id": "1eef9d03",
    "metadata": {},
    "outputs": [
@@ -1226,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 540,
    "id": "d7b88d54",
    "metadata": {},
    "outputs": [],
@@ -1239,6 +985,146 @@
     "# print(df_copy['numvotes_bin'].value_counts())\n",
     "# print(df_copy.groupby('numvotes_bin')['numVotes'].describe())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb00d92",
+   "metadata": {},
+   "source": [
+    "##### StartYear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 541,
+   "id": "4b458449",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    21556.000000\n",
+      "mean      1991.677862\n",
+      "std         26.246643\n",
+      "min       1878.000000\n",
+      "25%       1977.000000\n",
+      "50%       1997.000000\n",
+      "75%       2013.000000\n",
+      "max       2024.000000\n",
+      "Name: startYear, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_copy['startYear'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 542,
+   "id": "7afe1797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #qcut con bins quasi uguali\n",
+    "# df_copy[\"startYear_bin\"] = pd.qcut(df[\"startYear\"], 4)\n",
+    "# df_copy[\"startYear_bin\"] = df_copy[\"startYear_bin\"].astype(str) + \"_SY\"\n",
+    "# print(df_copy.groupby('startYear_bin')['startYear'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 543,
+   "id": "6cd220b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "media_bin\n",
+      "era_analogica       6043\n",
+      "era_mobile          4781\n",
+      "era_TvClassica      4208\n",
+      "era_dig_internet    2745\n",
+      "era_multipiat       2103\n",
+      "era_preTv           1676\n",
+      "Name: count, dtype: int64\n",
+      "                   count         mean        std     min     25%     50%  \\\n",
+      "media_bin                                                                  \n",
+      "era_preTv         1676.0  1929.335919  15.040044  1878.0  1920.0  1933.0   \n",
+      "era_TvClassica    4208.0  1967.392823   8.008874  1950.0  1961.0  1968.0   \n",
+      "era_analogica     6043.0  1990.960119   5.663629  1980.0  1986.0  1992.0   \n",
+      "era_dig_internet  2745.0  2005.437523   2.485493  2001.0  2003.0  2006.0   \n",
+      "era_mobile        4781.0  2014.745869   2.854866  2010.0  2012.0  2015.0   \n",
+      "era_multipiat     2103.0  2021.613885   1.268155  2020.0  2021.0  2022.0   \n",
+      "\n",
+      "                     75%     max  \n",
+      "media_bin                         \n",
+      "era_preTv         1941.0  1949.0  \n",
+      "era_TvClassica    1974.0  1979.0  \n",
+      "era_analogica     1996.0  1999.0  \n",
+      "era_dig_internet  2008.0  2009.0  \n",
+      "era_mobile        2017.0  2019.0  \n",
+      "era_multipiat     2023.0  2024.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#STARTYEAR\n",
+    "bins = [\n",
+    "    1877,  # Inizio del periodo di analisi -> da qua pre tv\n",
+    "    1949,  # inizio cinema classico\n",
+    "    1979,  # Era televisiva analogica e inizio videogiochi\n",
+    "    1999,  # Era digitale iniziale\n",
+    "    2009,  # Era streaming e social media\n",
+    "    2019,  # Era multipiattaforma avanzata\n",
+    "    df_copy['startYear'].max()] #era corrente\n",
+    "labels = ['era_preTv', 'era_TvClassica', 'era_analogica', 'era_dig_internet', 'era_mobile', 'era_multipiat']\n",
+    "df_copy['media_bin'] = pd.cut(df_copy['startYear'], bins=bins, labels=labels)\n",
+    "\n",
+    "print(df_copy['media_bin'].value_counts())\n",
+    "print(df_copy.groupby('media_bin')['startYear'].describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7171b585",
+   "metadata": {},
+   "source": [
+    "##### totalCredits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d763024d",
+   "metadata": {},
+   "source": [
+    "##### criticReviewsTotal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52fbb1cf",
+   "metadata": {},
+   "source": [
+    "#### numRegions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c04a4d8",
+   "metadata": {},
+   "source": [
+    "##### userReviewsTotal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a39fceb",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
